@@ -1,1 +1,4 @@
 this is JavaEE with a possibility of multiple servers including Wildfly and Tomcat.
+
+--add-opens=java.base/java.security=ALL-UNNAMED
+to the -vmargs section in eclipse.ini.
